[tool.poetry]
name = "longitudinal-arm-swing"
version = "0.1.0"
description = ""
authors = ["Erikpostt"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.0"
seaborn = "^0.13.2"
nbconvert = "^7.16.6"
forestplot = "^0.4.1"
statsmodels = "^0.14.4"
lifelines = "^0.30.0"
dotenv = "^0.9.9"
paradigma = "^1.0.3"
pyarrow = "^21.0.0"
pingouin = "^0.5.5"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
